--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  localstore: ^1.4.0
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
