--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   intl: any
   http: ^1.2.2
+  mongo_dart: ^0.10.3
+  connectivity_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
